<resources>
  <string name="app_name">달서사</string>
  <string name="name_start_message">반가워요!</string>
  <string name="name_name_result">더위 먹은 코알라</string>
  <string name="name_name_endpoint">님</string>
  <string name="name_start_button">서울 방방콕콕 시작하기</string>
  <string name="name_next_btn_message">본격적으로 신나는 서울 여행을 시작해볼까요?</string>
  <string name="header_back">이전</string>
  <string name="header_cancel">취소</string>
  <string name="header_next">다음</string>
  <string name="review_button">꿀팁 보러가기</string>
  <string name="review_best_logo">베스트 댓글</string>
  <string name="write_title">해당 장소를 감성적으로 표현해주세요</string>
  <string name="write_local_name">장소의 구체적인 이름을 적어주세요</string>
  <string name="write_local_addr">주소를 적어주면, 더 많은 사람들이 갈지도 몰라요!</string>
  <string name="write_content">더 많은 사람들이 달콤한 서울의 계절을 느낄 수 있도록 해당 장소를 매력적으로 소개해주세요!</string>
  <string name="review_delete">삭제</string>
  <string name="season_button">서울 탐방 시작하기</string>
  <string name="season_spring_title">나는 봄의 서울을 보고싶어</string>
  <string name="season_spring_subTitle">봄꽃이 가득한 서울의 봄을 여행할거야</string>
  <string name="season_summer_title">나는 여름의 서울을 보고싶어</string>
  <string name="season_summer_subTitle">생기 넘치는 청량한 서울을 여행할 거야</string>
  <string name="season_autumn_title">나는 가을의 서울을 보고싶어</string>
  <string name="season_autumn_subTitle">단풍 가득한 서울의 거리를 거닐 거야</string>
  <string name="season_winter_title">나는 겨울의 서울을 보고싶어</string>
  <string name="season_winter_subTitle">춥지만 마음은 따듯한 서울을 즐길 거야</string>
  <string name="tendency_button">타입 설정 완료</string>
  <string name="type_food">뭐든지 먹어버려!\n관광지의 모든 음식을 맛보고 말 거야!\n내 입맛을 만족시키기는 쉽지 않을 거야</string>
  <string name="type_artist">아름다운 서울의 경치를 내 두 눈에 담겠어!\n예쁜 사진은 내 몫이야 남는 건 사진뿐이라고!</string>
  <string name="type_traveler">서울에 가장 유명한 곳은 어디지?\n명소 도장 깨기 쾅쾅!\n남들 가본 곳은 나도 꼭 가봐야 해!</string>
  <string name="type_explorer">어디든 움직이고 보는 불도저 타입!\n눈이 오나 비가 오나 나는 움직일 거야!\n동에 번쩍 서에 번쩍 여행은 움직이는 거야!</string>
  <string name="type_niggard">내 지갑은 소중하니까!\n한 푼도 허투루 쓰지 않겠어!\n돈을 많이 쓰지 않고서도 잘 놀 수 있다는 걸 보여줄게!</string>
  <string name="tendency_name_food_fighter">식도락형</string>
  <string name="tendency_name_artist">예술가형</string>
  <string name="tendency_name_niggard">알뜰형</string>
  <string name="tendency_name_traveler">여행가형</string>
  <string name="tendency_name_explorer">관광객형</string>
  <string name="header_bookmark">즐겨찾기 목록</string>
  <string name="header_highlight">서울 하이라이트</string>
  <string name="header_style">여행 스타일 설정</string>
  <string name="header_season">여행 계절 선택</string>
  <string name="title_activity_write_review">WriteReviewActivity</string>
</resources>
