<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/tv_start_message"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:lineSpacingExtra="15sp"
    android:textColor="@color/red1"
    android:layout_marginStart="@dimen/size45"
    android:layout_marginTop="@dimen/size92"
    android:text="@string/name_start_message"
    android:textSize="@dimen/text_size30"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/iv_start_icon"
    app:layout_constraintBottom_toTopOf="@+id/tv_name_result"/>
  <ImageView
    android:id="@+id/iv_start_icon"
    android:layout_width="@dimen/size26"
    android:layout_height="@dimen/size23"
    android:src="@drawable/icon_heart"
    android:layout_marginStart="@dimen/size4"
    app:layout_constraintTop_toTopOf="@id/tv_start_message"
    app:layout_constraintBottom_toBottomOf="@id/tv_start_message"
    app:layout_constraintStart_toEndOf="@id/tv_start_message"/>
  <TextView
    android:id="@+id/tv_name_result"
    android:layout_width="@dimen/size180"
    android:layout_height="wrap_content"
    android:textColor="@color/black2"
    android:text="@string/name_name_result"
    android:textSize="@dimen/text_size24"
    android:textStyle="bold"
    android:gravity="start|center_horizontal"
    android:layout_marginTop="16dp"
    app:layout_constraintTop_toBottomOf="@id/tv_start_message"
    app:layout_constraintStart_toStartOf="@id/tv_start_message"
    app:layout_constraintEnd_toStartOf="@+id/tv_name_endpoint"
    app:layout_constraintBottom_toTopOf="@+id/v_underLine"/>
  <TextView
    android:id="@+id/tv_name_endpoint"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/size4"
    android:text="@string/name_name_endpoint"
    android:textColor="@color/gray22"
    android:textSize="@dimen/text_size17"
    android:textStyle="bold"
    app:layout_constraintStart_toEndOf="@id/tv_name_result"
    app:layout_constraintEnd_toStartOf="@+id/iv_change_button"
    app:layout_constraintBottom_toBottomOf="@id/tv_name_result"/>
  <ImageView
    android:id="@+id/iv_change_button"
    android:layout_width="@dimen/size20"
    android:layout_height="@dimen/size20"
    android:layout_marginStart="@dimen/size6"
    android:src="@drawable/icon_change"
    app:layout_constraintStart_toEndOf="@id/tv_name_endpoint"
    app:layout_constraintBottom_toBottomOf="@id/tv_name_endpoint"/>
  <View
    android:id="@+id/v_underLine"
    android:layout_width="@dimen/size245"
    android:layout_height="@dimen/size1"
    android:background="@color/gray22"
    android:layout_marginTop="@dimen/size4"
    app:layout_constraintTop_toBottomOf="@id/tv_name_result"
    app:layout_constraintStart_toStartOf="parent"/>
  <Button
    android:id="@+id/btn_name_submit"
    android:layout_width="@dimen/size244"
    android:layout_height="@dimen/size43"
    android:background="@drawable/item_radius2"
    android:drawableEnd="@drawable/icon_next_arrow"
    android:paddingEnd="@dimen/size8"
    android:layout_marginBottom="@dimen/size10"
    android:text="@string/name_start_button"
    android:textColor="@color/white5"
    android:textSize="@dimen/text_size19"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/tv_start_button_message"/>
  <TextView
    android:id="@+id/tv_start_button_message"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:lineSpacingExtra="6sp"
    android:layout_marginBottom="@dimen/size60"
    android:text="@string/name_next_btn_message"
    android:textColor="@color/black2"
    android:textSize="@dimen/text_size13"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>