<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:background="@color/white5"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".view.write.WriteActivity">
  <android.support.constraint.ConstraintLayout
    android:id="@+id/cl_header"
    android:layout_width="match_parent"
    android:layout_height="@dimen/size46">
    <TextView
      android:id="@+id/tv_header_cancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/size30"
      android:text="@string/header_cancel"
      android:textColor="@color/black77"
      android:textSize="@dimen/text_size16"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
      android:layout_width="@dimen/size24"
      android:layout_height="@dimen/size20"
      android:src="@drawable/icon_heart"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
      android:id="@+id/tv_header_next"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/size30"
      android:text="@string/header_next"
      android:textColor="@color/red1"
      android:textSize="@dimen/text_size16"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>
    <View
      android:layout_width="@dimen/match_parent"
      android:layout_height="@dimen/size1"
      android:background="@color/gray11"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"/>
  </android.support.constraint.ConstraintLayout>
  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="@dimen/match_parent"
    app:layout_constraintTop_toBottomOf="@id/cl_header"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">
    <android.support.constraint.ConstraintLayout
      android:id="@+id/cl_write_body"
      android:layout_width="match_parent"
      android:layout_height="@dimen/match_parent"
      android:background="@color/white5">
      <com.glide.slider.library.SliderLayout
        android:id="@+id/sl_write_images"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size360"
        android:background="@color/white5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
      <EditText
        android:id="@+id/et_write_title"
        android:layout_width="@dimen/match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size20"
        android:layout_marginStart="@dimen/size16"
        android:layout_marginEnd="@dimen/size16"
        android:background="@null"
        android:hint="@string/write_title"
        android:textColorHint="@color/gray11"
        android:textSize="@dimen/text_size18"
        android:textColor="@color/black2"
        android:textStyle="bold"
        android:lines="2"
        app:layout_constraintTop_toBottomOf="@id/sl_write_images"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
      <EditText
        android:id="@+id/et_write_local_name"
        android:layout_width="@dimen/match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size1"
        android:layout_marginStart="@dimen/size16"
        android:layout_marginEnd="@dimen/size16"
        android:background="@null"
        android:hint="@string/write_local_name"
        android:textColorHint="@color/gray11"
        android:textSize="@dimen/text_size13"
        android:textColor="@color/black77"
        android:textStyle="bold"
        android:lines="1"
        app:layout_constraintTop_toBottomOf="@id/et_write_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
      <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_local"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size26"
        android:background="@color/red1op10"
        android:layout_marginTop="@dimen/size19"
        android:layout_marginStart="@dimen/size16"
        android:layout_marginEnd="@dimen/size16"
        app:layout_constraintTop_toBottomOf="@id/et_write_local_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
          <ImageView
            android:id="@+id/iv_local_icon"
            android:layout_width="@dimen/size13"
            android:layout_height="@dimen/size16"
            android:layout_marginStart="@dimen/size40"
            android:src="@drawable/icon_red_location"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
          <EditText
            android:id="@+id/et_write_local_addr"
            android:layout_width="@dimen/match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size16"
            android:layout_marginEnd="@dimen/size40"
            android:background="@null"
            android:hint="@string/write_local_addr"
            android:textColorHint="@color/red2"
            android:textSize="@dimen/text_size11"
            android:textColor="@color/red1"
            android:textStyle="bold"
            android:lines="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_local_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
      </android.support.constraint.ConstraintLayout>
      <View
        android:id="@+id/v_underLine"
        android:layout_width="@dimen/match_parent"
        android:layout_height="@dimen/size1"
        android:background="@color/gray11"
        android:layout_marginTop="@dimen/size19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_local"/>
      <ImageView
        android:id="@+id/iv_word_start"
        android:layout_width="@dimen/size16"
        android:layout_height="@dimen/size12"
        android:layout_marginTop="@dimen/size20"
        android:layout_marginStart="@dimen/size16"
        android:src="@drawable/icon_word_right"
        android:scaleType="fitXY"
        app:layout_constraintTop_toBottomOf="@id/v_underLine"
        app:layout_constraintStart_toStartOf="parent"/>
      <ImageView
        android:id="@+id/iv_word_end"
        android:layout_width="@dimen/size16"
        android:layout_height="@dimen/size12"
        android:layout_marginTop="@dimen/size20"
        android:layout_marginEnd="@dimen/size16"
        android:src="@drawable/icon_word_left"
        android:scaleType="fitXY"
        app:layout_constraintTop_toBottomOf="@id/v_underLine"
        app:layout_constraintEnd_toEndOf="parent"/>
      <EditText
        android:id="@+id/et_write_content"
        android:layout_width="@dimen/match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:paddingStart="@dimen/size8"
        android:paddingEnd="@dimen/size8"
        android:paddingBottom="@dimen/size20"
        android:textSize="@dimen/text_size12"
        android:textStyle="bold"
        android:textColor="@color/black77"
        android:textColorHint="@color/gray11"
        android:hint="@string/write_content"
        app:layout_constraintTop_toTopOf="@id/iv_word_start"
        app:layout_constraintStart_toEndOf="@id/iv_word_start"
        app:layout_constraintEnd_toStartOf="@id/iv_word_end"
        app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
  </ScrollView>
</android.support.constraint.ConstraintLayout>